@@ -1,3 +1,9 @@
+2002-11-22  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/interp.test: interp-14.4
+	* generic/tclInterp.c (TclPreventAliasLoop): prevent seg fault
+	when creating an alias command over the interp name. [Bug #641195]
+
 2002-11-18  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclUtil.c (SetEndOffsetFromAny): handle integer offset
